# ai-image-renamer-tool-ollama

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  OPTIMALIMAGERENAMER.py  OPTIMALIMAGERENAMER_SOTA2026.py  PROJECT_REVIEW_REPORT.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
.retired/: OPTIMALIMAGERENAMER.py
tests/: __init__.py  conftest.py  test_optimal_image_renamer.py
